# to-do-app

./: .env  .gitignore  package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/database/: Cargo.toml
src-tauri/database/src/: lib.rs
src-tauri/migration/: Cargo.toml
src-tauri/migration/src/: lib.rs  m20241029_231516_create_users_table.rs
src-tauri/src/: main.rs
src-tauri/src/entity/: user.rs
