[package]
name = "tauri-to-do"
version = "0.1.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"


[workspace]
members = [".", "entity", "migration"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]

# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_to_do_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
sea-orm = { version = "1.0.0-rc.5", features = [
    "sqlx-sqlite",
    "runtime-tokio-native-tls",
    "macros",
    "debug-print",
] }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dotenv = "0.15.0"
tokio = "1.41.0"
entity = { path = "entity" }
migration = { path = "migration" } # depends on your needs
